# yfnutool

./: .gitmodules  Cargo.toml  README.md  default.nix
nu-mod/yfnutool/: mod.nu
proptest-regressions/: cmd_line.txt  main.txt
src/: cmd_line.rs  debug.rs  main.rs  nu_kind_sym.rs
yfnutool-macros/: Cargo.toml
yfnutool-macros/src/: lib.rs
