[package]
name = "yfnutool"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
proptest = "1.6.0"
yare = "3.0.0"
pretty_assertions = "1.4.1"

[build-dependencies]
cc="*"

[dependencies]
anyhow = "1.0.94"
bumpalo = { version = "3.16.0", features = ["collections", "boxed"] }
clap = "4.5.23"
clap-verbosity-flag = "3.0.2"
comptime = "1.0.0"
crop = "0.4.2"
env_logger = "0.11.5"
log = "0.4.22"
rmp = "0.8.14"
rmp-serde = "1.3.0"
tree-sitter = "0.24.5"
tree-sitter-nu = { path = "tree-sitter-nu" }
