[package]
name = "yfnutool"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
proptest = "1.6.0"
yare = "3.0.0"
pretty_assertions = "1.4.1"

[build-dependencies]
cc="*"

[dependencies]
annotate-snippets = "0.11.5"
anyhow = "1.0.94"
bstr = { version = "1.11.1", features = ["serde", "unicode"] }
bumpalo = { version = "3.16.0", features = ["collections", "boxed"] }
clap = "4.5.23"
clap-verbosity-flag = "3.0.2"
crop = "0.4.2"
either = "1.13.0"
env_logger = "0.11.5"
log = "0.4.22"
rmp = "0.8.14"
rmp-serde = "1.3.0"
tree-sitter = "0.25.6"
tree-sitter-nu = { path = "tree-sitter-nu" }
unicode-segmentation = "1.12.0"
yfnutool-macros = { path = "yfnutool-macros" }

[[bin]]
name = "_yfnutool-bin"
path = "src/main.rs"
